--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
@@ -19,6 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# dependencies
-node_modules
-
+.env
